# automacao_fipe

./: .gitignore  LICENSE  README.md  fipe.py  getrak.py  main_2.py  planilha.py  pyproject.toml
